# metadata-xml

./: .gitignore  Dockerfile  MANIFEST.in  README.md  docker_init.sh  download_cioos_waf.sh  pyproject.toml  record_minimum_eng.yaml  requirements.txt  run_docker_tests.sh  setup.py  test_all_records.sh  validate.sh
.circleci/: config.yml
.github/workflows/: python.yaml
metadata_xml/: __main__.py  cioos_template.jinja2  erddap.py  iso_template.py  template_functions.py  tests.py  validation.py
metadata_xml/iso19115-cioos-template/: bilingual.j2  charstring.j2  contact.j2  instrument.j2  main.j2
sample_records/: record.yaml  record.yml  record_full_eng.yaml  record_minimum_fra.yaml  record_no_project.yml  record_no_taxa.yml  record_project_list.yml
tests/: test_conversion.py
validate/schema/standards.iso.org/iso/19110/fcc/1.0/: abstract.xsd  fcc.xsd
validate/schema/standards.iso.org/ittf/PubliclyAvailableStandards/ISO_19136_Schemas/: basicTypes.xsd  coordinateOperations.xsd  coordinateReferenceSystems.xsd  coordinateSystems.xsd  coverage.xsd  datums.xsd  deprecatedTypes.xsd  dictionary.xsd  direction.xsd  dynamicFeature.xsd  feature.xsd  geometryAggregates.xsd  geometryBasic0d1d.xsd  geometryBasic2d.xsd  geometryComplexes.xsd  geometryPrimitives.xsd  gml.xsd  gmlBase.xsd  grids.xsd  measures.xsd  observation.xsd  referenceSystems.xsd  temporal.xsd  temporalReferenceSystems.xsd  temporalTopology.xsd  topology.xsd  units.xsd  valueObjects.xsd
validate/schema/standards.iso.org/ittf/PubliclyAvailableStandards/ISO_19139_Schemas/gco/: basicTypes.xsd  gcoBase.xsd
validate/schema/standards.iso.org/ittf/PubliclyAvailableStandards/ISO_19139_Schemas/gsr/: spatialReferencing.xsd
xml/: README.md  cioos_mandatory.xml  cioos_mandatory_template.xml  cioos_profile_xml_structure.txt  cioos_profile_xml_structure_namespaces.txt  cioos_template.jinja2  cioos_template.xml  coast_of_bays_cioos.xml  iso_template.py  record.yaml  record_bop_excel.yaml  record_bop_excel_blanks.yaml  requirements.txt
xml/cioos_atlantic/: coast_of_bays_hnap.xml  record_bop_excel.yaml
(+64 files in other folders)
