[project]
name = "metadata-xml"
version = "0.2.0"
description = "Python module for converting ACDD style metadata into the CIOOS ISO profile"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "jinja2>=3.1.2",
    "markupsafe>=2.1.1",
    "pyyaml>=6.0.1",
    "validators==0.20.0",
    "yattag==1.14.0",
]

[tool.uv]
dev-dependencies = [
    "lxml>=5.3.1",
    "pytest>=8.3.5",
    "ruff>=0.11.3",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["metadata_xml"]

[tool.setuptools.package-data]
metadata_xml = ["metadata_xml/iso19115-cioos-template/*.j2"]

[tool.ruff]
lint.extend-select = ["I"]
